Change greeting from 'Hello git' to 'Haiii git'

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css"> 
 </head>
 <body>
-    <h1>Hello git</h1>
+    <h1>Haiii git</h1>
     <p>This is a sample HTML file to demonstrate git version control.</p>
 
 </body>
